# prometheus

./: .gitignore  LICENSE  README.md  prometheus.conf.json  pyproject.toml
.github/workflows/: ci.yml
conf/: guilds.conf.json  launcher.conf.json  prometheus.conf.json  tui.conf.json  viewer.conf.json
deploy/: qq-prometheus.service
doc/: ARCHITECTURE.md  CONFIGURATION.md  DATA_FORMAT.md  DEPLOYMENT.md
doc/research/: comment-fetch.md
scripts/: backfill_comment_media.py  migrate_multi_guild.py  scraper_backfill.py  setup.sh  start_launcher.sh  start_qq.sh  start_tui.sh
src/launcher/: __init__.py  __main__.py  api.py  commands.py  process_manager.py  shell.py
src/prometheus/: README_LEGACY.md  __init__.py  _envconfig.py  api-server.js  autoscroll.py  cipher.py  cli.py  config.py  feed.py  inject.js  keyring.py  lock.js  logger.js  media.py  package_patched.json  scraper.py
src/prometheus/tests/: api-server.test.js  lock.test.js  logger.test.js
src/tui/: __init__.py  __main__.py  api.py  api_client.py  app.py
src/tui/tabs/: __init__.py  base.py  prometheus_tab.py  tui_tab.py  viewer_tab.py
src/viewer/: __init__.py
src/viewer/backend/: __init__.py  api.py  indexer.py  schema.py  server.py
src/web_scraper/: __main__.py  api_server.py  client.py  comments.py  config.py  daemon.py  feeds.py  lock.py  media.py  store.py  urlnorm.py
tests/: test_api_client.py  test_launcher.py  test_launcher_api.py  test_launcher_shell.py  test_tui_api.py  test_viewer_api.py  test_viewer_indexer.py  test_viewer_schema.py
tests/test_web_scraper/: test_api_server.py  test_client.py  test_comment_media.py  test_comments.py  test_config.py  test_daemon.py  test_feeds.py  test_lock.py  test_media.py  test_migrate_multi_guild.py  test_scraper_backfill.py  test_store.py
(+34 files in other folders)
