[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus"
version = "0.1.0"
description = "Archive QQ guild channel posts from local encrypted databases"
requires-python = ">=3.10"
dependencies = ["cryptography>=42.0", "textual>=8.0"]

[project.scripts]
prometheus = "prometheus.cli:main"
prometheus-launcher = "src.launcher.__main__:main"
prometheus-tui = "src.tui.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prometheus = ["inject.js"]
